# venturemate-backend

./: .env.example  .gitignore  Cargo.toml  FINAL_TEST_REPORT.md  IMPLEMENTATION_SUMMARY.md  MODULE_COVERAGE_REPORT.md  README.md  TEST_REPORT.md  test_all_modules.sh  test_api.py  test_api.sh
.github/workflows/: deploy.yml
docs/: AI_INTEGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  EMAIL_SERVICE.md  PHASES_IMPLEMENTATION.md  README.md  VENTUREMATE_API_SPEC.md  VENTUREMATE_ARCHITECTURE.md  VENTUREMATE_DATABASE.md
migrations/: 20240320000000_initial_schema.sql  20240321000000_blob_storage_and_updates.sql  20250120000001_create_email_logs.sql  20250120000002_create_password_reset_tokens.sql  20250321000001_create_onboarding_sessions.sql  20250321000002_add_uploads_deleted_at.sql  20250321200000_ai_core_features.sql  20250322000000_auth_system_compliance.sql  20250322000001_onboarding_wizard_full.sql  20250322090000_ai_startup_engine.sql  20250322100000_phase2_branding_documents.sql  20250322110000_phase4_intelligence_growth.sql  20250323000000_startup_stack_generator.sql  20250323000001_fix_onboarding_answers_constraint.sql
scripts/: test_db_connection.sh
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/handlers/: ai_conversations.rs  ai_generation.rs  ai_startup_engine.rs  auth.rs  banking.rs  branding.rs  businesses.rs  cofounder.rs  credit.rs  crm.rs  dashboard.rs  data_room.rs  documents.rs  health.rs  health_score.rs  investors.rs  marketplace.rs  mod.rs  onboarding.rs  onboarding_wizard.rs  recommendations.rs  social.rs  startup_stack.rs  subscriptions.rs  users.rs  websites.rs
src/middleware/: auth.rs  mod.rs
src/models/: ai_conversation.rs  ai_generation.rs  ai_startup_engine.rs  auth.rs  banking.rs  branding.rs  business.rs  crm.rs  (+19 more)
(+29 files in other folders)
